--- a/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.css
+++ b/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.css
@@ -69,7 +69,7 @@
 	width: 500%;
 	margin: 0;
 	left: 0;
-	animation: 20s slider infinite;
+	animation: 20s /*slider*/ infinite;
 }
 #slider figure img {
 	width: 20%;
